Generate CompanyInfrastructureMapperImplTest